mbuffer (20110119-3) UNRELEASED; urgency=medium

  * Fix the watch file: support both absolute and relative links.
  * Remove the obsolete DM-Upload-Allowed source control field.

 -- Peter Pentchev <roam@ringlet.net>  Tue, 21 Oct 2014 15:32:10 +0300

mbuffer (20110119-2) unstable; urgency=low

  * Fix the watchfile: the upstream download page's URLs are fully
    qualified now.
  * Fix the FTBFS on GNU/Hurd by trying fpathconf() before PIPE_BUF and
    checking for several more constants if that fails.
  * Update the copyright file to the latest DEP 5 candidate format and
    add the GPL-3+ license in the header, too, just in case.
  * Upload to unstable.

 -- Peter Pentchev <roam@ringlet.net>  Thu, 10 Mar 2011 14:54:13 +0200

mbuffer (20110119-1) experimental; urgency=low

  * Switch to Git and point the Vcs-* fields to Gitorious.
  * Bump Standards-Version to 3.9.1 with no changes.
  * Switch to bzip2 compression for the Debian tarball.
  * Bump the debhelper compatibility level to 8 and reorder
    the dh(1) arguments.
  * New upstream release (10th anniversary!)
  * Convert the copyright file to DEP 5 rev. 153 (candidate) and
    bump the year on my copyright notice.

 -- Peter Pentchev <roam@ringlet.net>  Thu, 20 Jan 2011 16:52:02 +0200

mbuffer (20100526-2) unstable; urgency=low

  * Shorten the Vcs-Browser URL.
  * Bump Standards-Version to 3.9.0 with no changes.

 -- Peter Pentchev <roam@ringlet.net>  Tue, 29 Jun 2010 01:03:28 +0300

mbuffer (20100526-1) unstable; urgency=low

  * New upstream release.
  * Use dpkg-buildflags from dpkg-dev >= 1.15.7~ to obtain CFLAGS and
    CPPFLAGS and to add -Wl,-z,defs to LDFLAGS; no longer rely on
    dpkg-buildpackage to export the flags variables automatically.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 02 Jun 2010 13:13:59 +0300

mbuffer (20100327-1) unstable; urgency=low

  [ Peter Pentchev ]
  * New upstream version.
    - remove the 07-manpage patch, integrated upstream