@@ -2,8 +2,8 @@ Source: mbuffer
 Section: utils
 Priority: optional
 Maintainer: Peter Pentchev <roam@ringlet.net>
-Build-Depends: debhelper (>> 8), autotools-dev (>= 20100122.1),
-	dpkg-dev (>= 1.15.7~), libmhash-dev
+Build-Depends: debhelper (>> 9), autotools-dev (>= 20100122.1),
+	libmhash-dev
 Standards-Version: 3.9.1
 Homepage: http://www.maier-komor.de/mbuffer.html
 Vcs-Git: git://gitorious.org/mbuffer/pkg-debian.git
