@@ -2,6 +2,10 @@ mbuffer (20110119-3) UNRELEASED; urgency=medium
 
   * Fix the watch file: support both absolute and relative links.
   * Remove the obsolete DM-Upload-Allowed source control field.
+  * Bump the debhelper compatibility version to 9:
+    - get the build hardening flags directly from debhelper
+    - drop the dpkg-dev versioned dependency (for dpkg-buildflags),
+      long satisfied even in oldstable
 
  -- Peter Pentchev <roam@ringlet.net>  Tue, 21 Oct 2014 15:32:10 +0300
 
